implement configs and version endpoints
